# video_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/video_bot/: answer.py  config.py  handler.py  load_json_data.py  logger.py  main.py  middleware.py
src/video_bot/database/: database.py  models.py
